--- a/Challenge/recreate2.html
+++ b/Challenge/recreate2.html
@@ -54,6 +54,35 @@
                 </ul>
             </div>
         </div>
+        <div class="firstCards">
+            <div class="firstCard1">
+                <h5>
+                    <span class="fas fa-clipboard" style="padding-right:5px;"></span> Completed Tasks
+                </h5>
+                <br>
+                <h3>
+                    85%
+                </h3>
+            </div>
+            <div class="firstCards">
+                <h5>
+                    <span class="fas fa-star" style="padding-right: 5px;"></span> Customer rating
+                </h5>
+                <br>
+                <h3>
+                    4.8
+                </h3>
+            </div>
+            <div class="fisrtCards3">
+                <h5>
+                    <span class="fas fa-clock" style="padding-right:5px;"></span> Team members
+                </h5>
+                <br>
+                <h3>
+                    12
+                </h3>
+            </div>
+        </div>
     </section>
 </div>
 </body>
