--- a/Challenge/recreate2.html
+++ b/Challenge/recreate2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS\recreate2.css">
 </head>
 <body>
-<div class="All">
+
     <div class="Header">
         <h4> <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
         <h3>Analytics</h3>
@@ -53,37 +53,37 @@
                     <a href="#"> <li>Work Time</li></a>
                 </ul>
             </div>
-        </div>
-        <div class="firstCards">
-            <div class="firstCard1">
-                <h5>
-                    <span class="fas fa-clipboard" style="padding-right:5px;"></span> Completed Tasks
-                </h5>
-                <br>
-                <h3>
-                    85%
-                </h3>
-            </div>
             <div class="firstCards">
-                <h5>
-                    <span class="fas fa-star" style="padding-right: 5px;"></span> Customer rating
-                </h5>
-                <br>
-                <h3>
-                    4.8
-                </h3>
+                <div class="firstCard1">
+                    <h5>
+                        <span class="fas fa-clipboard" style="padding-right:5px;"></span> Completed Tasks
+                    </h5>
+                    <h3>
+                        85%
+                    </h3>
+                </div>
+                <div class="firstCard2">
+                    <h5>
+                        <span class="fas fa-star" style="padding-right: 5px;"></span> Customer rating
+                    </h5>
+                    <h3>
+                        4.8
+                    </h3>
+                </div>
+                <div class="firstCard3">
+                    <h5>
+                        <span class="fas fa-clock" style="padding-right:5px;"></span> Avg. Time
+                    </h5>
+                    <h3>
+                        3.5h
+                    </h3>
+                </div>
             </div>
-            <div class="fisrtCards3">
-                <h5>
-                    <span class="fas fa-clock" style="padding-right:5px;"></span> Team members
-                </h5>
-                <br>
-                <h3>
-                    12
-                </h3>
-            </div>
+   
+              </div>
         </div>
+        
     </section>
-</div>
+
 </body>
 </html>
