--- a/Challenge/recreate2.html
+++ b/Challenge/recreate2.html
@@ -48,9 +48,9 @@
             <div class="top">
                 <ul>
                     <a href="#"> <li >Overview</li></a>
-                    <a href="#"> <li style="margin-right:20px; margin-left: 20px;">Employees</li></a>
-                    <a href="#"> <li style="margin-right:20px; margin-left: 20px;">Tasks</li></a>
-                    <a href="#"> <li style="margin-right: 20px; padding-left: 20px;">Work Time</li></a>
+                    <a href="#"> <li id="employee">Employees</li></a>
+                    <a href="#"> <li id="Tasks" >Tasks</li></a>
+                    <a href="#" > <li id="Work"  >Work Time</li></a>
                 </ul>
             </div>
             <div class="firstCards">
@@ -107,11 +107,11 @@
                         <div class="threeZero"></div>
                         <div class="twoZero"></div>
                     </div>
-                    <br>
-                    <br>
+                   <div class="progress-text">
                     <p><span class="fas fa-circle" style="font-size: 13px; color: purple; opacity: 0.5;"></span> Unused  
                     <span class="fas fa-circle" style="font-size: 13px; color: blue; margin-left: 10px; opacity: 0.5;"></span> used 
                     <span class="fas fa-circle" style="font-size: 13px; color: black; margin-left: 10px;"></span> Reserved  </p>
+                </div>
                 </div>
           </div>
           <div class="secondCharts">
