--- a/Challenge/recreate2.html
+++ b/Challenge/recreate2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="shortcut icon" href="IMG/recreate2.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS\fontawesome-free-5.15.1-web\fontawesome-free-5.15.1-web\css\all.min.css">
     <link rel="stylesheet" href="CSS\bootstrap-5.1.3-dist\css\bootstrap.min.css">
     <link rel="stylesheet" href="CSS\recreate2.css">
@@ -11,8 +12,8 @@
 <body>
 
     <div class="Header">
-        <h4> <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
-        <h3>Analytics</h3>
+        <h4 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
+        <h3 id="displayUsername">Hello, </h3>
         <div class="Head-btn">
             <button> <a href="#" class="fas fa-user-plus"></a></button>
             <button><a href="#" class="fas fa-comment-dots" ></a></button>
