--- a/Challenge/signup2.html
+++ b/Challenge/signup2.html
@@ -21,7 +21,7 @@
       <h5 id="Back">Holla,</h5>
       <h5 id="Welcome">Welcome Back</h5>
       <br>
-      <form id="form" method="POST">
+      <form id="form"  method="POST">
         <img src="./icons/Home.svg" class="icon" alt="">
         <input type="text" id="username" name="username" autocomplete="off" placeholder="username" required>
            <br> 
@@ -33,7 +33,8 @@
         <input type="password" id="password2" name="password" placeholder="Confirm Password">
          <img src="icons/eye-off.svg" alt="toggle visibility" class="eye-icon" id="eyeIcon2"   >
           <br>
-        <a id="submit-btn" href="http://127.0.0.1:5500/recreate2.html"><button type="button">Next</button></a>
+          <p id="message" style="color: red;"></p>
+        <a id="submit-btn" href="http://127.0.0.1:5500/Challenge/recreate2.html"><button type="button">Next</button></a>
       </form>
     </div>
     <div id="img">
