added footer and file name changes

--- a/Challenge/flusync-signup.html
+++ b/Challenge/flusync-signup.html
@@ -34,7 +34,7 @@
          <img src="icons/eye-off.svg" alt="toggle visibility" class="eye-icon" id="eyeIcon2"   >
           <br>
           <p id="message" style="color: red;"></p>
-        <a id="submit-btn" href="http://127.0.0.1:5500/Challenge/recreate2.html"><button type="button">Next</button></a>
+        <a id="submit-btn" href="recreate2.html"><button type="button">Next</button></a>
       </form>
     </div>
     <div id="img">
