--- a/Challenge/flusync-signup.html
+++ b/Challenge/flusync-signup.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="IMG/recreate2.png" type="image/x-icon">
   <link rel="stylesheet" href="CSS\fontawesome-free-5.15.1-web\fontawesome-free-5.15.1-web\css\all.min.css">
   <link rel="stylesheet" href="CSS\bootstrap-5.1.3-dist\css\bootstrap.min.css">
-  <link rel="stylesheet" href="CSS/signup2.css">
+  <link rel="stylesheet" href="CSS/flusync-signup.css">
 
 </head>
 
@@ -34,7 +34,7 @@
          <img src="icons/eye-off.svg" alt="toggle visibility" class="eye-icon" id="eyeIcon2"   >
           <br>
           <p id="message" style="color: red;"></p>
-        <a id="submit-btn" href="recreate2.html"><button type="button">Next</button></a>
+        <a id="submit-btn" href="flusync.html"><button type="button">Next</button></a>
       </form>
     </div>
     <div id="img">
@@ -45,7 +45,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
 
-  <script src="signup2.js"></script>
+  <script src="flusync-signup.js"></script>
   <script src="CSS\bootstrap-5.1.3-dist\js\bootstrap.bundle.min.js"></script>
 </body>
 
