--- a/Challenge/flusync.html
+++ b/Challenge/flusync.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Flusync</title>
     <link rel="shortcut icon" href="IMG/recreate2.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS\fontawesome-free-5.15.1-web\fontawesome-free-5.15.1-web\css\all.min.css">
     <link rel="stylesheet" href="CSS\bootstrap-5.1.3-dist\css\bootstrap.min.css">
-    <link rel="stylesheet" href="CSS\recreate2.css">
+    <link rel="stylesheet" href="CSS/flusync.css">
 </head>
 <body>
 
@@ -24,10 +24,10 @@
         <nav>
             <ul class="nav-list">
                 <button id="navHome">
-                    <a href="#">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
+                    <a href="flusync.html">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
                 </button>
                 <button>
-                  <a href="#">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
+                  <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
                 </button>
                 <button>
                 <a href=""> <li> <span class="far fa-check-circle" style="padding-right:5px;"></span>Goals</li></a>
@@ -193,18 +193,18 @@
             </div>
             <div class="bottom-box-links">
                 <h4>Follow Us On</h4>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-whatsapp-square"></i>
-                <i class="fab fa-instagram-square"></i>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-whatsapp-square"></i></a>
+                <a href="#"><i class="fab fa-instagram-square"></i></a>
             </div>
         </div>
     </footer> 
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
     
-    <script src="recreate2.js"></script>
+    <script src="flusync.js"></script>
     <script src="CSS\bootstrap-5.1.3-dist\js\bootstrap.bundle.min.js"></script>
 </body>
 </html>
