--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="CSS/flusync-teams.css">
     <link rel="stylesheet" href="CSS/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="Header">
@@ -18,7 +21,7 @@
             <button  id="upgrade"><a href="#">upgrade plan</a></button>
         </div>
     </div>
-    <section>
+    <section >
          <nav>
             <ul class="nav-list">
                 <button id="navHome">
@@ -136,15 +139,75 @@
                     </div>
                 </div>
                 <div class="team-members">
-                    <div class="team-member-card">
-                        <img src="IMG/man-in-office.jpg" alt="profile"> <br>
-                        <h2>BEN SHAPIRO</h2>
-                        <h4>UI Developer</h4>
-                        <h3>FRONTEND</h3>
+                    <div id="cardOne" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
                         <ul>
-                            <a href="#"> <span class="fab fa-instagram-square"></span></a>
-                            <a href="#"> <span class="fab fa-facebook-square"></span></a>
-                            <a href="#"> <span class=" fab fa-twitter-square"></span></a>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div>
+                    <div id="cardTwo" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> 
+                    <div id="cardThree" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div>
+                    <div id="cardFour" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div>
+                    <div id="cardFive" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> 
+                      <div id="cardSix" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> 
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
                     </div>
@@ -154,5 +217,71 @@
 
         </div>
     </section>
+        <footer>
+        <div class="top-box">
+            <div class="top-box-content">
+                <h2>
+                    Ready for the next project?
+                </h2>
+                <p>
+                    Let's get started
+                </p>
+            </div>
+            <div class="top-box-btn">
+                <a href="#">
+                    <button>
+                        Contact Us
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="bottom-box">
+            <div class="bottom-box-logo">
+                <h4 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
+                <p>&copy; 2012</p>
+            </div>
+            <div class="bottom-box-company">
+                <ul>
+                    <li>
+                        <h3>
+                            Company
+                        </h3>
+                    </li>
+                    <li>
+                        <a href="#">About us</a>
+                    </li>
+                    <li>
+                        <a href="#">Careers</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>  
+            <div class="bottom-box-info">
+                 <ul>
+                    <li>
+                        <h3>
+                            More Information
+                        </h3>
+                    </li>
+                    <li>
+                        <a href="#">Terms & conditions</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="bottom-box-links">
+                <h4>Follow Us On</h4>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-whatsapp-square"></i></a>
+                <a href="#"><i class="fab fa-instagram-square"></i></a>
+            </div>
+        </div>
+    </footer> 
 </body>
 </html>
