--- a/Challenge/flusync.html
+++ b/Challenge/flusync.html
@@ -20,7 +20,7 @@
         <div class="Head-btn">
             <button> <a href="#" class="fas fa-user-plus"></a></button>
             <button><a href="#" class="fas fa-comment-dots" ></a></button>
-            <button  id="upgrade"><a href="#">upgrade plan</a></button>
+            <button  id="upgrade"><a href="flusync-signup.html">Sign Up</a></button>
         </div>
     </div>
     <section >
