--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -153,9 +153,11 @@
                         <p>Filter</p>
                         <div id="filterLinks">
                           <a href="#" data-filter="all" class="active" onclick="filterByCategory(event)">All</a>
+                          <a href="#" data-filter="Frontend" onclick="filterByCategory(event)">Frontend</a>
                           <a href="#" data-filter="Backend" onclick="filterByCategory(event)">Backend</a>
                           <a href="#" data-filter="Research" onclick="filterByCategory(event)">Research</a>
                           <a href="#" data-filter="Marketing" onclick="filterByCategory(event)">Marketing</a>
+                           <a href="#" data-filter="Financial" onclick="filterByCategory(event)">Financial</a>
                         </div>
                     </div>
                 </div> 
@@ -172,10 +174,10 @@
                         </ul> 
                         <button>Learn More</button>
                     </div>
-                    <div data-category="Backend" class="team-member-card">
+                    <div data-category="Frontend" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
-                        <h3>BEN Mario</h3>
-                        <h5>UI Developer</h5>
+                        <h3>MARIO WARUII</h3>
+                        <h5>Frontend Developer</h5>
                         <h4>FRONTEND</h4>
                         <ul>
                             <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
@@ -185,10 +187,10 @@
                         <button>Learn More</button>
                     </div> 
                     <div data-category="Research" class="team-member-card">
-                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
-                        <h3>BEN SHAPIRO</h3>
-                        <h5>UI Developer</h5>
-                        <h4>FRONTEND</h4>
+                        <img src="IMG/woman-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>ANGELINA</h3>
+                        <h5>Statistical Analyst</h5>
+                        <h4>RESEARCH</h4>
                         <ul>
                             <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
                             <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
@@ -196,11 +198,11 @@
                         </ul> 
                         <button>Learn More</button>
                     </div>
-                    <div data-category="Financial" class="team-member-card">
+                    <div data-category="Backend" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
-                        <h3>BEN SHAPIRO</h3>
-                        <h5>UI Developer</h5>
-                        <h4>FRONTEND</h4>
+                        <h3>ADENIYE</h3>
+                        <h5>API Developer</h5>
+                        <h4>BACKEND</h4>
                         <ul>
                             <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
                             <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
@@ -210,6 +212,74 @@
                     </div>
                     <div data-category="Marketing" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN CARL</h3>
+                        <h5>Market specialist</h5>
+                        <h4>MARKETING</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> 
+                     <div data-category="Backend" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>JOSEPH</h3>
+                        <h5>Flask Api Developer</h5>
+                        <h4>BACKEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> 
+                    <div data-category="Frontend" class="team-member-card">
+                        <img src="IMG/woman-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>ANE SHARON</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Research" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>James Odion</h3>
+                        <h5>Pattern Analyst</h5>
+                        <h4>RESEARCH</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Frontend" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>MR. RONNIE</h3>
+                        <h5>Lead Ui Engineer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Financial" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>MR. OKEY</h3>
+                        <h5>Financial Director</h5>
+                        <h4>FINANCIAL</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Marketing" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>BEN SHAPIRO</h3>
                         <h5>UI Developer</h5>
                         <h4>FRONTEND</h4>
@@ -219,8 +289,40 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> 
-                     <div data-category="Marketing" class="team-member-card">
+                    </div> <div data-category="Marketing" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Marketing" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Marketing" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> <div data-category="Marketing" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>BEN SHAPIRO</h3>
                         <h5>UI Developer</h5>
