--- a/Challenge/flusync.html
+++ b/Challenge/flusync.html
@@ -27,19 +27,19 @@
         <nav>
             <ul class="nav-list">
                 <button id="navHome">
-                    <a href="flusync.html">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
+                    <a href="flusync.html">  <li> <span class="fas fa-home nav-icon"></span> <span class="nav-text">Home</span> </li></a>
                 </button>
                 <button>
-                  <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
+                  <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends nav-icon" ></span> <span class="nav-text">Teams</span></li></a>
                 </button>
                 <button>
-                <a href=""> <li> <span class="far fa-check-circle" style="padding-right:5px;"></span>Goals</li></a>
+                <a href=""> <li> <span class="far fa-check-circle nav-icon"></span><span class="nav-text"><p >Goals</p></span></li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-star" style="padding-right:5px;"></span>Private Tasks</li></a>
+                    <a href="#"> <li> <span class="fas fa-star nav-icon" ></span><p class="nav-text">Private Tasks</p></li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-chart-bar" style="padding-right:5px;"></span>Analytics</li></a>
+                    <a href="#"> <li> <span class="fas fa-chart-bar nav-icon" ></span><p class="nav-text">Analytics</p></li></a>
                 </button>
             </ul>
             <div class="profile">
