--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -28,13 +28,13 @@
                     <a href="flusync.html">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
                 </button>
                 <button id="navTeam">
-                  <a href="#">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
+                  <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
                 </button>
                 <button>
-                <a href=""> <li> <span class="far fa-check-circle" style="padding-right:5px;"></span>Goals</li></a>
+                <a href="flusync-goals.html"> <li> <span class="far fa-check-circle" style="padding-right:5px;"></span>Goals</li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-star" style="padding-right:5px;"></span>Private Tasks</li></a>
+                    <a href="#"> <li> <span class="fas fa-star" style="padding-right:5px;"></span>Tasks</li></a>
                 </button>
                 <button>
                     <a href="#"> <li> <span class="fas fa-chart-bar" style="padding-right:5px;"></span>Analytics</li></a>
