--- a/Challenge/flusync.html
+++ b/Challenge/flusync.html
@@ -23,7 +23,7 @@
             <button  id="upgrade"><a href="flusync-signup.html">Sign Up</a></button>
         </div>
     </div>
-    <section >
+    <section>
         <nav>
             <ul class="nav-list">
                 <button id="navHome">
@@ -33,13 +33,13 @@
                   <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends nav-icon" ></span> <span class="nav-text">Teams</span></li></a>
                 </button>
                 <button>
-                <a href=""> <li> <span class="far fa-check-circle nav-icon"></span><span class="nav-text"><p >Goals</p></span></li></a>
+                <a href="flusync-goals.html"> <li> <span class="far fa-check-circle nav-icon"></span><span class="nav-text">Goals</span></li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-star nav-icon" ></span><p class="nav-text">Private Tasks</p></li></a>
+                    <a href="#"> <li> <span class="fas fa-star nav-icon" ></span> <span class="nav-text" >Tasks</span></li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-chart-bar nav-icon" ></span><p class="nav-text">Analytics</p></li></a>
+                    <a href="#"> <li> <span class="fas fa-chart-bar nav-icon" ></span><span class="nav-text" >Analytics</span></li></a>
                 </button>
             </ul>
             <div class="profile">
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="firstChart2">
-                    <p>Budget usage</p>
+                    <h5>Budget usage</h5>
                     <h2>$50,734</h2>
                     <div class="proGress">
                             <div class="fifty">50%</div>
@@ -208,6 +208,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
     
     <script src="flusync.js"></script>
-    <script src="CSS\bootstrap-5.1.3-dist\js\bootstrap.bundle.min.js"></script>
+ 
 </body>
 </html>
