new pages and some changes

--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <div class="Header">
-        <h4 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
-        <h3> Teams  </h3>
+        <h3 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h3>
+        <h5> Teams  </h5>
+        
         <div class="Head-btn">
             <button> <a href="#" class="fas fa-user-plus"></a></button>
             <button><a href="#" class="fas fa-comment-dots" ></a></button>
@@ -37,7 +38,7 @@
                     <a href="#"> <li> <span class="fas fa-star" style="padding-right:5px;"></span>Tasks</li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-chart-bar" style="padding-right:5px;"></span>Analytics</li></a>
+                    <a href="flusync-analytics.html"> <li> <span class="fas fa-chart-bar" style="padding-right:5px;"></span>Analytics</li></a>
                 </button>
             </ul>
             <div class="profile">
