--- a/Challenge/flusync.html
+++ b/Challenge/flusync.html
@@ -15,8 +15,8 @@
 <body>
 
     <div class="Header">
-        <h4 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h4>
-        <h3 id="displayUsername">Hello, </h3>
+        <h3 > <span class="fas fa-shapes" style="margin-right: 5px;"></span> Flusync</h3>
+        <h5 id="displayUsername">Hello, </h5>
         <div class="Head-btn">
             <button> <a href="#" class="fas fa-user-plus"></a></button>
             <button><a href="#" class="fas fa-comment-dots" ></a></button>
@@ -39,7 +39,7 @@
                     <a href="#"> <li> <span class="fas fa-star nav-icon" ></span> <span class="nav-text" >Tasks</span></li></a>
                 </button>
                 <button>
-                    <a href="#"> <li> <span class="fas fa-chart-bar nav-icon" ></span><span class="nav-text" >Analytics</span></li></a>
+                    <a href="flusync-analytics.html"> <li> <span class="fas fa-chart-bar nav-icon" ></span><span class="nav-text" >Analytics</span></li></a>
                 </button>
             </ul>
             <div class="profile">
