--- a/flusync-goals.html
+++ b/flusync-goals.html
@@ -59,7 +59,7 @@
                         filter <span class="fas fa-filter"></span>
                     </button>
                     <button id="addGoal">
-                         Add a Goal <span class="fas fa-plus"></span>
+                         Add Goal <span class="fas fa-plus"></span>
                     </button>
                 </div>
                  <div class="content-goals">
