--- a/Challenge/flusync-analytics.html
+++ b/Challenge/flusync-analytics.html
@@ -53,10 +53,10 @@
                      <h2>
                         Total Projects
                      </h2>
-                <div class="total-projects">
-                    <div class="firstChart1">
+                <div class="total-charts">
+                    <div class="firstChartone">
                         <canvas id="PieChartOne"></canvas>
-                        <div>
+                        <div class="firstChartone-content">
                             <h3>Total Projects</h3>
                         </div>
                     </div>
