new page & changes

--- a/Challenge/flusync-analytics.html
+++ b/Challenge/flusync-analytics.html
@@ -50,25 +50,85 @@
         </nav>
         <div class="content">
             <div class="Projects">
-                     <h2>
-                        Total Projects
-                     </h2>
+                <h2>
+                    Total Projects
+                </h2>
                 <div class="total-charts">
                     <div class="firstChartone">
                         <canvas id="PieChartOne"></canvas>
                         <div class="firstChartone-content">
-                            <h3>Total Projects</h3>
-                            <p>bababbababbabbabbababa</p>
+                            <h4>Total Revenue</h4>
+                            <h5>Accumulated Earnings</h5>
+                            <h3>$11,235,354.56 <span class=" trendOne fas fa-arrow-down"></span> <span
+                                    id="perIncOne">3.5%</span></h3>
+                            <div class="firstChartone-slider">
+                                <div class="firstChartone-slider-content">
+                                    <button id="oneDay">1d</button>
+                                    <button id="oneWeek">1w</button>
+                                    <button id="oneMonth">1m</button>
+                                    <button id="oneYear" class="active">1y</button>
+                                    <button id="allTime">All</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div>
-
+                    <div class="firstCharttwo">
+                        <canvas id="PieChartTwo"></canvas>
+                        <div class="firstCharttwo-content">
+                            <h4>Total Savings</h4>
+                            <h5>Accumulated Savings</h5>
+                            <h3>$2,544,212.77 <span class=" trendTwo fas fa-arrow-up"></span> <span id="perIncTwo">12%</span>
+                            </h3>
+                            <div class="firstCharttwo-slider">
+                                <div class="firstCharttwo-slider-content">
+                                    <button id="oneDay">1d</button>
+                                    <button id="oneWeek">1w</button>
+                                    <button id="oneMonth">1m</button>
+                                    <button id="oneYear">1y</button>
+                                    <button id="allTime" class="active">All</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                 
-                     <div>
-
+                <div class="projects-content">
+                    <div class="projects-content-header">
+                        <h3>Our Customers</h3>
+                        <button id="editCustomer">Edit <span  class="cus fas fa-edit"></span></button>
+                        <button id="addCustomer">Add <span class="cus fas fa-plus"></span></button>
+                        <button id="deleteCustomer">Delete <span class="cus fas fa-trash"></span></button>
                     </div>
+                    <div class="projects-content-head">
+                        <h6>Name</h6>
+                        <h6>Project</h6>
+                        <h6>Status</h6>
+                        <h6>Rating</h6>
+                    </div>
+                    <div class="projects-content-body">
+                        <div class="projects-content-body-item">
+                            <h6>Craig-lubin</h6>
+                            <h6>Flusync</h6>
+                            <h6>Active</h6>
+                            <!-- <h6><span class="fas fa-star"></span> 4.5</h6> -->
+                            <h6>Incomplete</h6>
+
+                        </div>
+                        <div class="projects-content-body-item">
+                            <h6>Mario </h6>
+                            <h6>Grills inc</h6>
+                            <h6>Complete</h6>
+                            <h6><span class="fas fa-star"></span> 3.5</h6>
+
+                        </div>
+                        <div class="lastOne projects-content-body-item">
+                            <h6>Felicia</h6>
+                            <h6>Make up co.</h6>
+                            <h6>Complete</h6>
+                            <h6><span class="fas fa-star"></span> 5</h6>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
